# KYC_Sentinel_Package

./: KYC_Sentinel_Input_Template.csv  README.md  README.txt  build_guide.txt  pyproject.toml  requirements.txt
KYC_Sentinel/: README.md  build_guide.txt  main.py  pyproject.toml  requirements.txt
KYC_Sentinel/assets/: icon_placeholder.txt
KYC_Sentinel/input/: sample_input.csv
input/: sample_input.csv
