[project]
name = "kyc-sentinel"
version = "1.0.0"
description = "GUI-based compliance tool for KYC/AML screening using OpenSanctions API"
authors = [
    {name = "KYC Sentinel Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kyc_sentinel"]

[project.scripts]
kyc-sentinel = "main:main"